remove extras and configure setup to work with remote server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,7 @@
             </div>
           </div>
           <div class="response-container">
-            <div class="response">Γειά σας! Θα θέλατε να απαντήσετε μερικές ερωτήσεις σχετικά με τη θεραπεία σας; Οι
-              απαντήσεις σας θα βοηθήσουν στην καλύτερη περίθαλψή σας, αλλά και στην έρευνα γύρω από τη νόσο του
-              καρκίνου του στήθους.</div>
+            <div class="response">{{start}}</div>
           </div>
           <div class="scroll-overlay overlay-hidden"></div>
         </div>
